# WebServer

./: .gitignore  CMakeLists.txt  Makefile
doc/: LICENSE
include/: Client.hpp  Server.hpp  TCPConnection.hpp
lib/: Client.cpp  Server.cpp  TCPConnection.cpp
src/: CMakeLists.txt  Client.cpp  Server.cpp  TCPConnection.cpp  clnt.cpp  sample.cpp  sev.cpp
test/: CMakeLists.txt  clnt.cpp  sev.cpp
